- Adjusted z-index of project navbar and mobile menu - Fixed minor CSS issues

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -81,7 +81,7 @@
   border: none;
   cursor: pointer;
   padding: 0;
-  z-index: 110;
+  z-index: 500;
 
   & svg {
     color: var(--blue-12);
@@ -97,7 +97,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 105;
+  z-index: 500;
   animation: fadeIn 0.3s ease-in-out;
 }
 
@@ -111,7 +111,7 @@
   border-left: 1px solid var(--gray-4);
   padding: 5rem 2rem 2rem 2rem;
   animation: slideIn 300ms ease-in-out;
-  z-index: 120;
+  z-index: 200;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
