--- a/src/components/project-navbar/ProjectNavbar.module.css
+++ b/src/components/project-navbar/ProjectNavbar.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 250;
   min-height: 200%;
   border-bottom: 1px solid var(--gray-5);
   background-color: var(--blue-a2);
@@ -41,16 +41,15 @@
   cursor: pointer;
   border: var(--border-width-1) solid var(--primary-100);
   text-decoration: none;
-  background: var(--secondary-100);
-  color: var(--primary-100);
+  background: var(--primary-200);
+  color: var(--secondary-100);
   white-space: nowrap;
   gap: var(--space-8);
 }
 
 .backButton:hover {
-  background: var(--primary-200);
+  background: var(--primary-100);
   color: var(--secondary-100);
-  border: var(--border-width-1) solid var(--primary-100);
   transform: translateY(-2px);
 }
 
