--- a/src/pages/projects/project-components/project-steps/ProjectSteps.module.css
+++ b/src/pages/projects/project-components/project-steps/ProjectSteps.module.css
@@ -5,8 +5,8 @@
 .sectionTitle {
   font-size: var(--font-size-h3);
   font-weight: var(--font-weight-bold);
-  color: var(--blue-11);
-  margin-bottom: var(--space-8);
+  color: var(--gray-12);
+  margin-bottom: var(--space-16);
 }
 
 .numberedList {
